Squashed commit of the following:
commit e81f47fa2a6aeb23b7893bd53171accb1255c54d
Author: Kianbel <kirkianbelcina@gmail.com>
Date:   Wed Jun 17 12:48:22 2026 +0800

    fsm for game controller

commit e95d6bd88972c4a21947fe1103b85a381295e0d5
Author: Kianbel <kirkianbelcina@gmail.com>
Date:   Tue Jun 16 16:02:19 2026 +0800

    removed unnecessary things

commit 5e5e7a0c731bf023528dfec376786e601080004e
Author: Kianbel <kirkianbelcina@gmail.com>
Date:   Tue Jun 16 15:11:58 2026 +0800

    optimization magic